--- a/game/explore.html
+++ b/game/explore.html
@@ -10,19 +10,19 @@
 </head>
 
 <body id="exploreBody">
-<<<<<<< HEAD
-<div>Enemy</div>
-<button type="button"></button>
-=======
-
-<img src="img/pistol.gif" style="position: absolute; top: 520px; left: 100px;" height="300" width="300" alt="">
-=======
 <img id="" src="img/pistol.gif" style="position: absolute; top: 520px; left: 100px;" height="300" width="300" alt="">
->>>>>>> origin/master
-<img src="img/enemies.gif" style="position: absolute; top: 520px; left: 1000px;" height="138" width="138" alt="">
-<img src="img/enemies.gif" style="position: absolute; top: 450px; left: 850px;" height="138" width="138" alt="">
-<img src="img/enemies.gif" style="position: absolute; top: 450px; left: 1000px;" height="64" width="64" alt="">
-<img src="img/enemies.gif" style="position: absolute; top: 350px; left: 1075px;" height="64" width="64" alt="">
+<img class="enemy1" src="img/enemies.gif" style="position: absolute; top: 520px; left: 1000px;" height="138" width="138" alt="">
+<img class="enemy2" src="img/enemies.gif" style="position: absolute; top: 450px; left: 850px;" height="138" width="138" alt="">
+<img class="enemy3" src="img/enemies.gif" style="position: absolute; top: 450px; left: 1000px;" height="64" width="64" alt="">
+<img class="enemy4" src="img/enemies.gif" style="position: absolute; top: 350px; left: 1075px;" height="64" width="64" alt="">
+<img class="blood1" src="img/blood.gif" style="position: absolute; top: 570px; left: 1040px;" height="64" width="64">
+<img class="blood2" src="img/blood.gif" style="position: absolute; top: 500px; left: 890px;" height="64" width="64">
+<img class="blood3" src="img/blood.gif" style="position: absolute; top: 450px; left: 1000px;" height="64" width="64">
+<img class="blood4" src="img/blood.gif" style="position: absolute; top: 350px; left: 1070px;" height="64" width="64">
+
+
+
+
 <!--Your code goes here !-->
 
 </body>
