--- a/game/index.html
+++ b/game/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
-<title>Nightwatch</title>
->>>>>>> origin/master
+<title>NightWatch</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="jquery-1.11.3.js"></script>
@@ -14,9 +12,7 @@
 
 <div class="titleContent">
 
-<<<<<<< HEAD
-<h1 class="splashTitle">Nightwatch</h1>
-=======
+<h1 class="splashTitle">NightWatch</h1>
 
 <a id="start" class="button" href="explore.html">Play</a>
 
